# alexoberneyer.github.io

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-docs-simple.yml  build-docs.yml
content/: example.html  index.html  post.md  post1.md
docs/: CNAME  about.html  colleague.html  colleague.md  count.html  end-of-programming-languages.html  end-of-programming-languages.md  happiness-ai.html  happiness-ai.md  index.html  itch.html  itch.md  not-replaced.html  not-replaced.md  performance-quadrants.html  performance-quadrants.md  productivity-app.html  productivity-app.md  raycast.html  raycast.md  teammate.html  teammate.md  vibe-writing.html  vibe-writing.md
docs/css/: style.css
src/: main.rs
templates/: index.html  post.html
